--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ env:
     global:
     - SHA=$(git rev-parse HEAD)
 before_install:
-    - docker build -t mihailiucalin/distrib_scrapper:latest .
     - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+    - docker pull mihailiucalin/distrib_scrapper:latest
+    - docker build -t mihailiucalin/distrib_scrapper:latest .
     - docker push mihailiucalin/distrib_scrapper:latest
 script:
     - docker run mihailiucalin/distrib_scrapper:latest
